...
        }
    };

    return (
        <DefaultSearchBar
            platform="default"
            placeholder={placeholder || "Search"}
            onChangeText={handleChangeText}
            onSubmitEditing={handleSubmitEditing}
            value={currentValue}
            containerStyle={styles.container}
            inputContainerStyle={{
                backgroundColor: 'transparent',
...
