...
 * @param {string} props.clinicName The name of the clinic (optional)
 * @param {string} props.address The address of the clinic. Only used if the hours are undefined(optional)
 */
export default function ClosestClinicButton({ href, hours, clinicName, address }: ClosestClinicBtnProps) {
  const ButtonContent = (
    <Pressable style={styles.container}>
      {/* Left Side: "Your Closest Clinic" & Directions */}
      <View style={styles.leftContainer}>
        <View style={styles.titleContainer}>
          <Text style={styles.clinicTitle}>Your Closest Clinic</Text>
          <Feather
            name="chevron-right"
            size={45}
...
