...

        fetchLocation();
    }, []);


    let response =  {
        location: location,
        error: error,
        loading: loading,
        isEnabled: isEnabled
    }
    return response;
    
...
