appId: com.skvaccineapplicationproject.skvaccineapp   
---
- launchApp
- assertVisible: "Clinic Info"
- tapOn: "Clinic Info"
- assertVisible: "Search"
- tapOn: "Search"
- inputText: "Swift Current"
- assertVisible: "Swift Current"
- hideKeyboard
